--- a/portfolio.css
+++ b/portfolio.css
@@ -4,36 +4,36 @@ body{
 
 .header{
   display: block;
-  width: 1821px;
-  height: 160px;
+  width: 1214.1110907757352px;
+  height: 106.6764275256px;
   background-color: rgba(233, 21, 21, 0.7);
   text-align: center;
 }
 
 .title{
   font-family: Arial, Helvetica, sans-serif;
-  font-weight: 1400;
-  font-size: 38px;
+  font-weight: 933.4187408490001;
+  font-size: 25.33565153733px;
   display: inline-block;
-  margin-top: 18px;
-  width: 1821px;
+  margin-top: 12.00109809663px;
+  width: 1214.1110907757352px;
 }
 
 .header-bottom-sect{
   display: inline-flex;
-  width: 1821px;
-  height: 80px;
+  width: 1214.1110907757352px;
+  height: 53.3382137628px;
   background-color: transparent;
-  margin-top: 17.34px;
+  margin-top: 11.5610578330869px;
   align-items: center;
   justify-content: space-between;
 }
 
 .about-me{
   color: black;
-  width: 340px;
-  height: 80px;
-  margin-left: 360px;
+  width: 226.68740849190002px;
+  height: 53.3382137628px;
+  margin-left: 240.02196193260002px;
   background-color: rgba(233, 21, 21, 0.2);
   display: inline-flex;
   align-items: center;
@@ -52,8 +52,8 @@ body{
 
 .projects{
   color: black;
-  width: 340px;
-  height: 80px;
+  width: 226.68740849190002px;
+  height: 53.3382137628px;
   background-color: rgba(233, 21, 21, 0.3);
   display: inline-flex;
   align-items: center;
@@ -72,9 +72,9 @@ body{
 
 .credits{
   color: black;
-  width: 340px;
-  height: 80px;
-  margin-right: 360px;
+  width: 226.68740849190002px;
+  height: 53.3382137628px;
+  margin-right: 240.02196193260002px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -92,12 +92,12 @@ body{
 }
 
 .body{
-  width: 1200px;
-  margin-left: 300px;
+  width: 800.073206442px;
+  margin-left: 200.0183016105px;
   background-color: rgba(233, 21, 21, 0.1);
-  border-radius: 10px;
-  margin-top: 36px;
+  border-radius: 6.66727672035px;
+  margin-top: 24.00219619326px;
   font-family: Arial, Helvetica, sans-serif;
-  line-height: 50px;
-  padding: 30px;
+  line-height: 33.33638360175px;
+  padding: 20.001830161050002px;
 }
